force-app/main/default/objects/Facultative_Share__c/Facultative_Share__c.object-meta.xml
<CustomObject>
    <label>Facultative</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facultatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>