force-app/main/default/objects/Facultative_Share__c/fields/Additional_Notes_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_Lintas__c</fullName>
    <label>Additional Notes Lintas</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>