force-app/main/default/objects/Facultative_Share__c/fields/Co_Insurer_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Insurer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co Insurer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Facultative_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>