force-app/main/default/objects/Facultative_Share__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>