force-app/main/default/objects/Facultative_Share__c/fields/Facultative_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Facultative_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facultative Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Facultatives</relationshipLabel>
    <relationshipName>Facultative_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>