force-app/main/default/objects/Facultative_Share__c/fields/Facultative_Type__c.field-meta.xml
<CustomField>
    <fullName>Facultative_Type__c</fullName>
    <label>Facultative Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proportional</fullName>
            </value>
            <value>
                <fullName>Non-Proportional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>