force-app/main/default/objects/Facultative_Share__c/fields/Folder_Id_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Folder_Id_Lintas__c</fullName>
    <label>Folder Id Lintas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>