force-app/main/default/objects/Facultative_Share__c/fields/Offering_Id_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Offering_Id_Lintas__c</fullName>
    <label>Offering Id Lintas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>