force-app/main/default/objects/Facultative_Share__c/fields/Origin_Risk__c.field-meta.xml
<CustomField>
    <fullName>Origin_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Risk</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Facultative_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>