force-app/main/default/objects/Facultative_Share__c/fields/Premium_on_Ceded_Portion__c.field-meta.xml
<CustomField>
    <fullName>Premium_on_Ceded_Portion__c</fullName>
    <formula>Rate__c *  Share_Offered_Amount__c</formula>
    <label>Premium on Ceded Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>