force-app/main/default/objects/Facultative_Share__c/fields/Premium_on_Ceded_Portion_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Premium_on_Ceded_Portion_Lintas__c</fullName>
    <formula>Rate_Lintas__c *  Share_Offered_Amount_Lintas__c</formula>
    <label>Premium on Ceded Portion Lintas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>