force-app/main/default/objects/Facultative_Share__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>