force-app/main/default/objects/Facultative_Share__c/fields/Rebate_Commission_Ceded_Portion_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Commission_Ceded_Portion_Lintas__c</fullName>
    <formula>Commission_Lintas__c *  Premium_on_Ceded_Portion_Lintas__c</formula>
    <label>Rebate/Commission Ceded Portion Lintas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>