force-app/main/default/objects/Facultative_Share__c/fields/Share_Accepted_Approved__c.field-meta.xml
<CustomField>
    <fullName>Share_Accepted_Approved__c</fullName>
    <label>Share Accepted/Approved (%)</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>