force-app/main/default/objects/Facultative_Share__c/fields/Share_Binding__c.field-meta.xml
<CustomField>
    <fullName>Share_Binding__c</fullName>
    <label>Share Binding (%)</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>