force-app/main/default/objects/Facultative_Share__c/fields/Share_Offered_Amount_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Share_Offered_Amount_Lintas__c</fullName>
    <formula>Amount_Insured__c * ( Share_Offered_Lintas__c / 100)</formula>
    <label>Share Offered Amount Lintas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>