force-app/main/default/objects/Facultative_Share__c/fields/Share_Offered_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Share_Offered_Lintas__c</fullName>
    <label>Share Offered (%) Lintas</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>