force-app/main/default/objects/Facultative_Share__c/fields/Sharing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Rate__c</fullName>
    <label>Sharing Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>