force-app/main/default/objects/Facultative_Share__c/fields/Soo_Id_Lintas__c.field-meta.xml
<CustomField>
    <fullName>Soo_Id_Lintas__c</fullName>
    <label>SOO_Id_Lintas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>