force-app/main/default/objects/Facultative_Share__c/fields/Subjectivity_Clauses__c.field-meta.xml
<CustomField>
    <fullName>Subjectivity_Clauses__c</fullName>
    <label>Subjectivity Clauses</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>