force-app/main/default/objects/Facultative_Share__c/recordTypes/Facultative_Share.recordType-meta.xml
<RecordType>
    <fullName>Facultative_Share</fullName>
    <active>true</active>
    <description>for save record final</description>
    <label>Facultative Share</label>
</RecordType>