force-app/main/default/objects/Facultative_Share__c/recordTypes/Folder.recordType-meta.xml
<RecordType>
    <fullName>Folder</fullName>
    <active>true</active>
    <description>for folder facul</description>
    <label>Folder</label>
</RecordType>