force-app/main/default/objects/Facultative_Share__c/listViews/Facultative_Share.listView-meta.xml
<ListView>
    <fullName>Facultative_Share</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Facultative_Share__c.Facultative_Share</value>
    </filters>
    <label>Facultative Share</label>
</ListView>