force-app/main/default/objects/Facultative_Share__c/listViews/Folder.listView-meta.xml
<ListView>
    <fullName>Folder</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Facultative_Share__c.Folder</value>
    </filters>
    <label>Folder</label>
</ListView>